src/status/snapshots/tvision_rs__status__status_line__tests__snapshot_drag_highlight_held_item.snap
---
source: src/status/status_line.rs
expression: "render(&mut line, 40, 1)"
---
size: 40x1
cursor: hidden
text:
| F1 Help  Alt-X Exit                    |
attr:
|abbaaaaaacdddddccccccaaaaaaaaaaaaaaaaaaa|
legend:
  . default
  a fg=RGB(0,0,0) bg=RGB(170,170,170)
  b fg=RGB(170,0,0) bg=RGB(170,170,170)
  c fg=RGB(0,0,0) bg=RGB(0,170,0)
  d fg=RGB(170,0,0) bg=RGB(0,170,0)
